Fix minor bugs in Docker setup