@@ -25,4 +25,4 @@ java -jar ./PaperJarDownloader.jar
 cd ./server || exit
 echo eula=true > eula.txt
 
-java -jar -XX:+UseZGC -XX:+ZGenerational ./server.jar nogui
+java -jar -XX:+UseZGC ./server.jar nogui
